nav bug
nav still was too wide for mobile/tablet. fixed

--- a/CSS/global.css
+++ b/CSS/global.css
@@ -296,7 +296,7 @@ nav {
 
 nav {
     height: 200px;
-    width: 500px;
+    width: 100%;
     margin-top: -135px;
     z-index: 1;
 }
@@ -503,7 +503,7 @@ nav {
 
 nav {
     height: 120px;
-    width: 128vw;
+    width: 100%;
     margin-top: -135px;
     z-index: 1;
 }
